# listUSB-rpi

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/listusb/: __init__.py  _platform.py  cli.py  filters.py  formatters.py  models.py  monitor.py  scanner.py
tests/: conftest.py  test_cli.py  test_filters.py  test_formatters.py  test_models.py  test_monitor.py  test_scanner.py
